# ai110-module3show-musicrecommendersimulation-starter

./: .gitignore  CLAUDE.md  README.md  algorithm_recipe.md  main.py  model_card.md  pyproject.toml  reflection.md  scoring_rule.md
data/: songs.csv
diagrams/: recommender_flow.mmd
src/: main.py  recommender.py
